--- a/PGY_3121_PRPrueba Parcial_Nomrbre/login.html
+++ b/PGY_3121_PRPrueba Parcial_Nomrbre/login.html
@@ -9,7 +9,7 @@
     <link rel="Icon" href="./../images/logo16x16.png" type="image/x-icon">
 </head>
 <body>
-<div class="Formulario">
+<div class="Inicio de sesion">
     <h1>Iniciar Sesión</h1>
     <form method="post">
         <div class="username">
