--- a/PGY_3121_PRPrueba Parcial_Nomrbre/index.html
+++ b/PGY_3121_PRPrueba Parcial_Nomrbre/index.html
@@ -1,12 +1,49 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <title>Virgolini hamburguesas</title>
 </head>
+
 <body>
-   
+    <header>
+        <div class=" menu container">
+            <a href="#"><img src="images/logo.svg" class="logo" alt=""></a>
+            <input type="checkbox" id="menu">
+            <label for="menu"><img src="images/menu.png" class="menu-icono" alt=""></label>
+            <nav class="navbar">
+                <ul>
+                    <li><a href="#">Inicio</a> </li>
+                    <li> <a href="#">Servicios</a></li>
+                    <li> <a href="#">Productos</a></li>
+                    <li> <a href="#">Contacto</a></li>
+                </ul>
+            </nav>
+        </div>
+
+        <div class="header-contennt container">
+            <div class="header-txt">
+                <h1>hamburguesas</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum dolorem impedit beatae possimus
+                    aliquam distinctio eos quia reiciendis, nulla veritatis earum tenetur est, dolorum reprehenderit!
+                    Nam expedita aperiam est necessitatibus.
+                </p>
+                <div class="Botones">
+                    <a href="#" class="btn-1">Comprar <img class="icon" src="images/car.svg" alt=""></a>
+                    <a href="#" class="btn-2">Información <img class="icon" src="images/arrow.svg" alt=""></a>
+
+                </div>
+
+            </div>
+
+        </div>
+
+    </header>
+
 </body>
+
 </html>
