--- a/PGY_3121_PRPrueba Parcial_Nomrbre/index.html
+++ b/PGY_3121_PRPrueba Parcial_Nomrbre/index.html
@@ -28,22 +28,71 @@
         <div class="header-contennt container">
             <div class="header-txt">
                 <h1>hamburguesas</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum dolorem impedit beatae possimus
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum dolorem impedit beatae possimus
                     aliquam distinctio eos quia reiciendis, nulla veritatis earum tenetur est, dolorum reprehenderit!
                     Nam expedita aperiam est necessitatibus.
                 </p>
                 <div class="Botones">
                     <a href="#" class="btn-1">Comprar <img class="icon" src="images/car.svg" alt=""></a>
                     <a href="#" class="btn-2">Información <img class="icon" src="images/arrow.svg" alt=""></a>
-
                 </div>
-
             </div>
 
-        </div>
+        </div class="header-img">
+        <img src="images/img-1.png" class="Hamburguesas" alt="hamburguer">
 
     </header>
 
+    <main class="product-menu">
+        <div class="container">
+
+            <div class="product">
+                <h2 class="title" h2>
+                    <img clas="hoja" src="images/hoja.png" alt="">
+            </div>
+
+            <div class="menu nav">
+                <div id="pro1" class="tab active">Hamburguesas</div>
+                <div id="pro2" class="tab ">Tacos</div>
+                <div id="pro3" class="tab ">Desayunos</div>
+
+            </div>  
+        
+            <div class="pro1 tab-content">
+                <div class="box-container-1">
+
+                </div>
+                <center>
+                    <div class="load-more" id="load-more-1">Cargar más</div>
+                </center>
+
+            </div>
+
+            <div class="pro2 tab-content">
+                <div class="box-container-2">
+
+                </div>
+                <center>
+                    <div class="load-more" id="load-more-2">Cargar más</div>
+                </center>
+
+            </div>
+            <div class="pro3 tab-content">
+                <div class="box-container-">
+
+                </div>
+                <center>
+                    <div class="load-more" id="load-more-3">Cargar más</div>
+                </center>
+
+            </div>
+
+
+
+        </div>
+
+    </main>
 </body>
 
 </html>
