--- a/PGY_3121_PRPrueba Parcial_Nomrbre/index.html
+++ b/PGY_3121_PRPrueba Parcial_Nomrbre/index.html
@@ -27,7 +27,7 @@ DOCTYPE html>
 
         <div class="header-contennt container">
             <div class="header-txt">
-                <h1>hamburguesas</h1>
+                <hr <h1>hamburguesas</h1> <hr>
                 <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum dolorem impedit beatae possimus
                     aliquam distinctio eos quia reiciendis, nulla veritatis earum tenetur est, dolorum reprehenderit!
