--- a/PGY_3121_PRPrueba Parcial_Nomrbre/index.html
+++ b/PGY_3121_PRPrueba Parcial_Nomrbre/index.html
@@ -325,8 +325,7 @@
                                                 <h3> burguer premium</h3>
                                                 <p>
                                                     Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nulla dolorum sed possimus
-                                                    nihil minima sunt inventore soluta pariatur. Odit harum fuga voluptates sit
-                                                    voluptatibus, enim assumenda facere accusamus amet obcaecati.
+                                                    nihil minima sunt inventore soluta pariatur. 
                                                 </p>
                                                 <div class=" icons">
                                                     <span class="price">$15.000</span>
@@ -344,8 +343,7 @@
                                                     <h3> burguer premium</h3>
                                                     <p>
                                                         Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nulla dolorum sed possimus
-                                                        nihil minima sunt inventore soluta pariatur. Odit harum fuga voluptates sit
-                                                        voluptatibus, enim assumenda facere accusamus amet obcaecati.
+                                                        nihil minima sunt inventore soluta pariatur. 
                                                     </p>
                                                     <div class=" icons">
                                                         <span class="price">$15.000</span>
@@ -380,8 +378,7 @@
                                                             <h3> burguer premium</h3>
                                                             <p>
                                                                 Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nulla dolorum sed possimus
-                                                                nihil minima sunt inventore soluta pariatur. Odit harum fuga voluptates sit
-                                                                voluptatibus, enim assumenda facere accusamus amet obcaecati.
+                                                                nihil minima sunt inventore soluta pariatur.
                                                             </p>
                                                             <div class=" icons">
                                                                 <span class="price">$15.000</span>
@@ -397,7 +394,7 @@
                                                             <div class="content">
                                                                 <h3> burguer premium</h3>
                                                                 <p>
-                                                                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nulla dolorum sed possimus
+                                                                    Lorm ipsum dolor sit, amet consectetur adipisicing elit. Nulla dolorum sed possimus
                                                                     nihil minima sunt inventore soluta pariatur. Odit harum fuga voluptates sit
                                                                     voluptatibus, enim assumenda facere accusamus amet obcaecati.
                                                                 </p>
