--- a/PGY_3121_PRPrueba Parcial_Nomrbre/index.html
+++ b/PGY_3121_PRPrueba Parcial_Nomrbre/index.html
@@ -30,9 +30,7 @@
             <div class="header-txt">
                 <h1></h1>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum dolorem impedit beatae possimus
-                    aliquam distinctio eos quia reiciendis, nulla veritatis earum tenetur est, dolorum reprehenderit!
-                    Nam expedita aperiam est necessitatibus.
+                    Hamburguesas virgolini, contigo desde 1997
                 </p>
                 <div class="Botones">
                     <a href="#" class="btn-1">Comprar <img class="icon" src="images/car.svg" alt=""></a>
