--- a/PGY_3121_PRPrueba Parcial_Nomrbre/index.html
+++ b/PGY_3121_PRPrueba Parcial_Nomrbre/index.html
@@ -47,12 +47,12 @@
         <div class="container">
 
             <div class="product">
-                <h2 class="title" h2>
-                    <img clas="hoja" src="images/hoja.png" alt="">
+                <h2 class="title">Menu</h2>
+                <img class="hoja" src="images/hoja.png" alt="">
             </div>
 
             <div class="menu nav">
-                <div id="pro1" class="tab active">Hamburguesas</div>
+                <div id="pro1" class="tab active">Hamburguesa</div>
                 <div id="pro2" class="tab ">Tacos</div>
                 <div id="pro3" class="tab ">Desayunos</div>
 
